--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "ecommerce",
   "version": "1.0.0",
-  "description": "all about nodejs and ecommerce",
+  "description": "",
   "main": "server.js",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "express-session": "^1.14.2",
+    "express": "^4.14.0",
+    "mongojs": "^2.4.0"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/arcred/EcommercePro.git"
-  },
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/arcred/EcommercePro/issues"
-  },
-  "homepage": "https://github.com/arcred/EcommercePro#readme"
+  "license": "ISC"
 }
