--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "ecommerce",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "MyShop",
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express-session": "^1.14.2",
     "express": "^4.14.0",
     "mongojs": "^2.4.0"
   },
@@ -16,4 +15,4 @@
   },
   "author": "",
   "license": "ISC"
-}
+} 
